--- a/client-vue/src/assets/style.scss
+++ b/client-vue/src/assets/style.scss
@@ -111,6 +111,9 @@ a {
 		vertical-align: middle;
 	}
 	*/
+    &.clickable {
+        cursor: pointer;
+    }
 }
 
 /*
